--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,178 @@
 <html lang='en'>
-    <head>
-        <meta charset='UTF-8' />
-        <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-        <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-        <title>Lionel's Blog</title>
-    </head>
-    <body>
-      {{> head}}
-    </body>
+
+<head>
+  <meta charset='UTF-8' />
+  <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+  <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  <title>Lionel's Blog</title>
+</head>
+<link rel="stylesheet" href="/public/fonts/fonts.css">
+<link rel="stylesheet" href="/public/css/reset.css">
+<link rel="stylesheet" href="/public/css/index.css">
+<link rel="stylesheet" href="//at.alicdn.com/t/font_3172047_ir1x3w0cyi.css">
+
+<body>
+  {{> head}}
+  <main>
+    <div class="content-wrap">
+      <ul class="post-wrap">
+        <li class="post-item">
+          <h3 class="title">Hello World</h3>
+          <ul class="post-info">
+            <li class="author">
+              <i class="iconfont icon-author"></i>
+              <span>Lionel</span>
+            </li>
+            <li class="date">
+              <i class="iconfont icon-date"></i>
+              <span>2022-02-23</span>
+            </li>
+          </ul>
+          <div class="post-desc">
+            <p>在我们深入细节之前，让我们快速预览一下基准测试的结果。在下方的图表中，我们在相同的网络中使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。）</p>
+          </div>
+          <ul class="other-info">
+            <li class="likes">
+              <i class="iconfont icon-likes"></i>
+              <span>999</span>
+            </li>
+            <li class="views">
+              <i class="iconfont icon-views"></i>
+              <span>999</span>
+            </li>
+            <li class="comments">
+              <i class="iconfont icon-comments"></i>
+              <span>999</span>
+            </li>
+          </ul>
+        </li>
+        <li class="post-item">
+          <h3 class="title">Hello World</h3>
+          <ul class="post-info">
+            <li class="author">
+              <i class="iconfont icon-author"></i>
+              <span>Lionel</span>
+            </li>
+            <li class="date">
+              <i class="iconfont icon-date"></i>
+              <span>2022-02-23</span>
+            </li>
+          </ul>
+          <div class="post-desc">
+            <p>在我们深入细节之前，让我们快速预览一下基准测试的结果。在下方的图表中，我们在相同的网络中使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。）</p>
+          </div>
+          <ul class="other-info">
+            <li class="likes">
+              <i class="iconfont icon-likes"></i>
+              <span>999</span>
+            </li>
+            <li class="views">
+              <i class="iconfont icon-views"></i>
+              <span>999</span>
+            </li>
+            <li class="comments">
+              <i class="iconfont icon-comments"></i>
+              <span>999</span>
+            </li>
+          </ul>
+        </li>
+        <li class="post-item">
+          <h3 class="title">Hello World</h3>
+          <ul class="post-info">
+            <li class="author">
+              <i class="iconfont icon-author"></i>
+              <span>Lionel</span>
+            </li>
+            <li class="date">
+              <i class="iconfont icon-date"></i>
+              <span>2022-02-23</span>
+            </li>
+          </ul>
+          <div class="post-desc">
+            <p>在我们深入细节之前，让我们快速预览一下基准测试的结果。在下方的图表中，我们在相同的网络中使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。）</p>
+          </div>
+          <ul class="other-info">
+            <li class="likes">
+              <i class="iconfont icon-likes"></i>
+              <span>999</span>
+            </li>
+            <li class="views">
+              <i class="iconfont icon-views"></i>
+              <span>999</span>
+            </li>
+            <li class="comments">
+              <i class="iconfont icon-comments"></i>
+              <span>999</span>
+            </li>
+          </ul>
+        </li>
+        <li class="post-item">
+          <h3 class="title">Hello World</h3>
+          <ul class="post-info">
+            <li class="author">
+              <i class="iconfont icon-author"></i>
+              <span>Lionel</span>
+            </li>
+            <li class="date">
+              <i class="iconfont icon-date"></i>
+              <span>2022-02-23</span>
+            </li>
+          </ul>
+          <div class="post-desc">
+            <p>在我们深入细节之前，让我们快速预览一下基准测试的结果。在下方的图表中，我们在相同的网络中使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。）</p>
+          </div>
+          <ul class="other-info">
+            <li class="likes">
+              <i class="iconfont icon-likes"></i>
+              <span>999</span>
+            </li>
+            <li class="views">
+              <i class="iconfont icon-views"></i>
+              <span>999</span>
+            </li>
+            <li class="comments">
+              <i class="iconfont icon-comments"></i>
+              <span>999</span>
+            </li>
+          </ul>
+        </li>
+        <li class="post-item">
+          <h3 class="title">Hello World</h3>
+          <ul class="post-info">
+            <li class="author">
+              <i class="iconfont icon-author"></i>
+              <span>Lionel</span>
+            </li>
+            <li class="date">
+              <i class="iconfont icon-date"></i>
+              <span>2022-02-23</span>
+            </li>
+          </ul>
+          <div class="post-desc">
+            <p>在我们深入细节之前，让我们快速预览一下基准测试的结果。在下方的图表中，我们在相同的网络中使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。使用相同的浏览器请求相同的站点，唯一不同的只是 HTTP协议的版本。每个站点都被重复请求20次，响应时间通过浏览器的Performance API 测量。（更多关于基准测试的细节在下方。）</p>
+          </div>
+          <ul class="other-info">
+            <li class="likes">
+              <i class="iconfont icon-likes"></i>
+              <span>999</span>
+            </li>
+            <li class="views">
+              <i class="iconfont icon-views"></i>
+              <span>999</span>
+            </li>
+            <li class="comments">
+              <i class="iconfont icon-comments"></i>
+              <span>999</span>
+            </li>
+          </ul>
+        </li>
+
+      </ul>
+      {{!-- <aside class="side-bar">
+        <div>123</div>
+      </aside> --}}
+    </div>
+  </main>
+</body>
+
 </html>
