--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -1,8 +1,7 @@
-
 <link rel="stylesheet" href="/public/css/head.css" />
 
 
-<header>
+<header id="header">
   <div class="header-wrap">
     <div class="logo-wrap" onclick="window.location='/'">
       <span>Lionel's Blog</span>
